<resources>
    <string name="app_name">Feedage</string>
    <string name="title_about">About</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_open_in_browser">Open in Browser</string>
    <string name="title_share">Share to...</string>
    <string name="title_picture">Picture</string>
    <string name="title_authors">Authors</string>
    <string name="title_written_by">Written by</string>
    <string name="title_written_by_author">Written by %s</string>
    <string name="title_view_more">View More</string>
    <string name="title_settings">Settings</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_new_feed">New feed...</string>
    <string name="title_theme">Theme</string>
    <string name="title_remove_feed">Remove Feed</string>
    <string name="msg_remove_feed">Are you sure that you want to delete the feed \"%s\"? This cannot be undone.</string>
    <string name="msg_feed_added">Feed added</string>
    <string name="msg_invalid_url">Invalid URL</string>
    <string name="title_feed_url">RSS feed URL</string>
    <string name="title_add_feed">Add Feed</string>
    <string name="title_updated_on">Updated on %s</string>
    <string name="title_published_on">Published on %s</string>
    <string name="action_bookmark_remove">Remove from Bookmarks</string>
    <string name="action_bookmark_add">Add to Bookmarks</string>
    <string name="title_syncing_articles">Syncing Articles</string>
    <string name="title_articles_sync">Articles Sync</string>
    <string name="title_sync_now">Sync Now</string>
    <string name="title_article_sync_time">Article Sync Time</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>AMOLED</item>
    </string-array>
</resources>
