<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_settings" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/title_theme"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/title_feeds"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/feeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp" />

            <TextView
                android:id="@+id/newFeed"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/title_new_feed"
                android:textColor="?android:textColorPrimary"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/syncTime"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/title_article_sync_time" />

                <TextView
                    android:id="@+id/syncTimeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="?android:textColorSecondary"
                    tools:text="12:00 PM" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>